Fix issue with navigation links overlapping Logo component

--- a/packages/frontend/src/features/Header/components/Navigation/index.module.css
+++ b/packages/frontend/src/features/Header/components/Navigation/index.module.css
@@ -23,7 +23,7 @@
 }
 
 .logo-container {
-    grid-area: 1 / 1 / 2 / -1;
+    grid-area: 1 / 1 / 2 / 2;
 
     @media (max-width: $mantine-breakpoint-lg) {
         grid-area: 1 / 2 / -1 / 3;
@@ -31,15 +31,13 @@
 }
 
 .other-links {
-    grid-area: 1 / 2 / 2 / -1;
+    grid-area: 1 / 2 / 2 / 3;
 
     display: flex;
     flex-direction: row;
     justify-content: end;
     align-items: center;
     gap: 16px;
-
-    width: 100%;
 
     @media (max-width: $mantine-breakpoint-lg) {
         grid-area: 1 / 3 / -1 / -1;
